2006-09-23  Michal Nazarewicz  <mnazarewicz@gmail.com> (tiny change)

	* textmodes/ispell.el (ispell-change-dictionary): Don't check the
	local dictionary when changing the global dictionary.

2006-09-23  Ken Manheimer  <ken.manheimer@gmail.com>

	* icomplete.el (icomplete-with-completion-tables): List of
	specialized completion tables with which icomplete should
	operate.  Include the new `internal-complete-buffer', so icomplete
	works with interactive buffer-selection.
	(icomplete-simple-completing-p): Add acceptance of specialized
	completion tables listed in icomplete-with-completion-tables.

2006-09-23  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* frame.el (focus-follows-mouse): Set default to nil on Mac.

	* startup.el (command-line): Use `custom-reevaluate-setting' for
	`focus-follows-mouse'.

2006-09-22  Richard Stallman  <rms@gnu.org>

	* cus-edit.el (custom-buffer-create-internal): In `emacs -q',
	explain why Save is not available.

2006-09-22  Juanma Barranquero  <lekktu@gmail.com>

	* woman.el (woman0-so): Use `let*', not `let'.
	(woman-horizontal-line): Remove unbalanced parenthesis.

2006-09-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* woman.el: Make sure all the end-of-region markers we use have
	a non-nil insertion-type.
	(woman0-so): Move things around so we can use copy-marker.
	(woman0-roff-buffer, woman2-process-escapes-to-eol, woman2-roff-buffer):
	Adjust marker type.
	(woman2-process-escapes): Check marker type.
	(woman-horizontal-line): Dispense with the use of a marker.

2006-09-22  Jay Belanger  <belanger@truman.edu>

	* calc/calc-lang.el: Add Greek letters to math-variable-table
	property of tex.

2006-09-22  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (save-some-buffers-action-alist): Display diff in
	view-mode.

2006-09-22  Masatake YAMATO  <jet@gyve.org>

	* add-log.el (add-log-current-defun): Use `forward-sexp'
	instead of `forward-word' to pick c++::symbol.
	Reported by Herbert Euler <herberteuler@hotmail.com>.